Shorten the image path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div><!--end od header-left div-->
 
           <div class="header-right">
-            <img id="owner" src="/home/dpennaman/Documents/Wyncode/C31/design_mockup/images/IMG_20180808_204727_567.jpg" alt="User picture">
+            <img id="owner" src="./images/IMG_20180808_204727_567.jpg" alt="User picture">
             <p> | </p>
             <p>+Upload</p>
           </div><!--end of header-right div-->
@@ -38,7 +38,7 @@
                 </ul>
           </div><!--end of aside tag div-->
           <div class="upper-section">
-              <img src="/home/dpennaman/Documents/Wyncode/C31/design_mockup/images/pexels-photo-371633.jpeg" alt="Landscape of mountains and stream">
+              <img src="./images/pexels-photo-371633.jpeg" alt="Landscape of mountains and stream">
           </div><!--end of upper-section div-->
         </div><!--end of aside-section-picture div-->
 
@@ -70,7 +70,7 @@
           <div class="section-comments">
             <div class="section-comments-one">
               <div class="section-comments-one-pic1">
-                <img src="/home/dpennaman/Documents/Wyncode/C31/design_mockup/images/fashion-1835901_640.jpg" alt="men smiling">
+                <img src="./images/fashion-1835901_640.jpg" alt="men smiling">
               </div>
               <div class="section-comments-one-view1">
                 <h4>Johnny Cash</h4>
@@ -79,7 +79,7 @@
             </div>
             <div class="section-comments-two">
               <div class="section-comments-two-pic2">
-                <img src="/home/dpennaman/Documents/Wyncode/C31/design_mockup/images/people-2564463_640.jpg" alt="a men reading a book and smiling">
+                <img src="./images/people-2564463_640.jpg" alt="a men reading a book and smiling">
               </div>
               <div class="section-comments-two-view2">
                 <h4>Malcolm Xavier</h4>
@@ -88,7 +88,7 @@
             </div>
             <div class="section-comments-three">
               <div class="section-comments-three-pic3">
-                <img src="/home/dpennaman/Documents/Wyncode/C31/design_mockup/images/shaman-2837843_640.jpg" alt="a women with eyes closes in sweater">
+                <img src="./images/shaman-2837843_640.jpg" alt="a women with eyes closes in sweater">
               </div>
               <div class="section-comments-one-view3">
                 <h4>Constance Love</h4>
