Changed path on Youtube image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="main-container">
       <div class="header">
         <div class="header-left">
-          <img id="logo" src="/home/dpennaman/Documents/Wyncode/C31/design_mockup/images/youtube_PNG21.png" alt="youtube logo">
+          <img id="logo" src="./images/youtube_PNG21.png" alt="youtube logo">
           <p> | </p>
           <p id="glass">&#x26B2;</p>
           <form >
